<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegioInformatieTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tvTaal"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/taalVanRegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etTaal"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tvValuta"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/valutaVanRegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etValuta"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tvHoofdstad"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/hoofdstadVanRegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etHoofdstad"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tvReligie"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/religieVanRegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etReligie"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tvSport"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/sportVanRegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etSport"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tvSpecialiteit"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/specialiteitVanRegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etSpecialiteit"
                android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>