<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".Activities.FilterActivity"
    android:orientation="vertical"
    android:background="@color/White"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/White"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/tbFilter"
        app:titleTextColor="@color/colorAccent"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

</com.google.android.material.appbar.AppBarLayout>


    <ScrollView android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        android:paddingVertical="8dp">


    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/talenCardView"
        style="@style/FilterCardView">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:text="@string/talen"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/talenChipGroup"/>

</LinearLayout>

</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/religiesCardView"
        style="@style/FilterCardView">


    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:text="@string/religie"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/religieChipGroup"/>

</LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>

</ScrollView>


    -<RelativeLayout
    android:layout_height="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:theme="@style/AppTheme.AppBarOverlay"
    android:id="@+id/buttonLayout"
    android:paddingVertical="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:paddingHorizontal="16dp">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/filterBevestigen"
        android:text="@string/bevestigen"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>